# Soli

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  configure  configure.ac
Debug/: Makefile  config.h  config.status  libtool
Debug/src/: Makefile  soli
Debug/src/.deps/: main.Po  soli-window.Po  soli.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: Makefile  Makefile.am  ca.dluco.soli.gschema.xml  org.gnome.soli.gschema.xml
plugins/: Makefile  Makefile.am  Makefile.in  demo-plugin.plugin  demo-plugin.py
plugins/bottom-padding/: Makefile.am  bottom-padding.plugin  bottom-padding.py
plugins/codecomment/: Makefile.am  codecomment.plugin  codecomment.py
plugins/demo-plugin/: demo-plugin.plugin  demo-plugin.py
plugins/highlight-selected/: Makefile.am  highlight-selected.plugin  highlight-selected.py
plugins/modelines/: Makefile.am  modeline-parser.c  modeline-parser.h  modelines.plugin  soli-modeline-plugin.c  soli-modeline-plugin.h
plugins/quickopen/: Makefile.am  quickopen.plugin
plugins/quickopen/quickopen/: __init__.py  popup.py
plugins/restoresession/: Makefile.am  TODO  ca.dluco.soli.plugins.restoresession.gschema.xml  restoresession.plugin  restoresession.py
plugins/sort/: Makefile.am  soli-sort-plugin.c  soli-sort-plugin.h  sort.plugin
plugins/sort/resources/: soli-sort.gresource.xml
plugins/spell/: Makefile.am  soli-spell-app-activatable.c  soli-spell-app-activatable.h  soli-spell-plugin.c  soli-spell-plugin.h  spell.plugin
plugins/wordcompletion/: Makefile.am  ca.dluco.soli.plugins.wordcompletion.gschema.xml  soli-word-completion-plugin.c  soli-word-completion-plugin.h  wordcompletion.plugin
plugins/wordcompletion/resources/: soli-word-completion.gresource.xml
src/: Makefile.am  Makefile.in  main.c  main.c~  menu-bar.ui  soli-app-activatable.c  soli-app-activatable.h  soli-app-osx.c  soli-app-osx.h  soli-app-private.h  soli-app-win32.c  soli-app-win32.h  soli-app-x11.c  soli-app-x11.h  soli-app.c  soli-app.h  soli-close-confirmation-dialog.c  soli-close-confirmation-dialog.h  soli-commands-documents.c  soli-commands-edit.c  soli-commands-file-print.c  soli-commands-file.c  soli-commands-help.c  soli-commands-private.h  soli-commands-search.c  soli-commands-view.c  soli-commands.c  soli-commands.h  soli-debug.c  soli-debug.h  soli-dirs.c  soli-dirs.h  soli-document-private.h  soli-document.c  soli-document.h  soli-documents-panel.c  soli-documents-panel.h  soli-encoding-items.c  soli-encoding-items.h  soli-encodings-combo-box.c  (+94 more)
src/resources/: menu-bar.ui  soli-view-frame.ui  soli.gresource.xml
src/resources/css/: soli-style.css  soli.adwaita.css  soli.highcontrast.css
src/resources/gtk/: menus.ui
src/resources/ui/: soli-encodings-dialog.ui  soli-highlight-mode-dialog.ui  soli-highlight-mode-selector.ui  soli-open-document-selector.ui  soli-preferences-dialog.ui  soli-print-preferences.ui  soli-print-preview.ui  soli-progress-info-bar.ui  soli-replace-dialog.ui  soli-shortcuts.ui  soli-status-menu-button.ui  soli-statusbar.ui  soli-tab-label.ui  soli-view-frame.ui  soli-window.ui
